--- a/UpSchool_ChainOfResponsibility/Views/_ViewImports.cshtml
+++ b/UpSchool_ChainOfResponsibility/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using UpSchool_ChainOfResponsibility
 @using UpSchool_ChainOfResponsibility.Models
+@using UpSchool_ChainOfResponsibility.DAL.Entities
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
